# CultureCultivation

./: .gitignore  README.md  quickstart.sh
helperScripts/: colors.txt  grassRandomizer.py
src/: CMakeLists.txt  assets.h  globals.h  main.cpp
src/entities/: entity.cpp  entity.h
src/entities/plants/: trees.cpp  trees.h
src/mapGeneration/: mapGenerator.cpp  mapGenerator.h
src/render/: render.cpp  render.h
src/render/camera/: camera.cpp  camera.h
src/utils/: assetClasses.cpp  assetClasses.h  clock.cpp  clock.h
src/world/: worldUpdater.h
